--- a/web/themes/custom/subtheme/scss/header.scss
+++ b/web/themes/custom/subtheme/scss/header.scss
@@ -2,7 +2,8 @@
 
 .layout__region--content {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .menu {
@@ -10,36 +11,64 @@
   display: flex;
 }
 
-.menu--header-menu .menu--level-1 li{
-  margin: 0 10px;
+.menu--header-left-menu .menu--level-1 li{  //menu & search elements
+  margin: 0 10px;     // this is for space between neighbors
+  display:flex;
   span {
     color: $base-color;
     @include hoverColor();
     }
 
-  &:nth-child(1){
-    display:flex;
+  &:first-child{      //menu
     &::after {
       @include addPlaceForIcon();
       background: url("../images/menu-icon.svg");
+      background-size: contain;
     }
   }
-  &:nth-child(2){
-    display: flex;
+  &:last-child{       //search
     &::after {
       @include addPlaceForIcon();
       background: url("../images/search-icon.svg");
+      background-size: contain;
     }
   }
-  &:nth-child(3){
-    margin: 0 20%;
-    width: 10rem;
-  }
-  &:nth-child(4){
+}
 
-  }
-  &:nth-child(5){
-    //position: absolute;
-    right: 0;
+.menu--header-right-menu .menu--level-1 {   //my account & subscribe elements
+  align-items: center;
+  & li {
+    margin: 0 10px; // this is for space between neighbors
+    display: flex;
+
+    span {
+      color: $base-color;
+      @include hoverColor();
+    }
+
+    &:first-child {       //my account
+      &::before {
+        @include addPlaceForIcon();
+        background: url("../images/person-cropped.svg");
+        background-size: contain;
+        background-repeat: no-repeat;
+      }
+    }
+
+    &:last-child {          //subscribe
+      background-color: $exclusive-color;
+      border-radius: 5px;
+      &:hover {
+        background-color: $base-color;
+      }
+
+      & a {
+        padding: 8px 12px;
+        color: white;
+
+      }
+
+
+    }
   }
 }
