4702 primary-menu style is added. Header properties are added. Classes for regions are still needed

--- a/web/themes/custom/subtheme/scss/_variables.scss
+++ b/web/themes/custom/subtheme/scss/_variables.scss
@@ -14,9 +14,11 @@ $font-weights: (
 );
 
 $font-size: (
-  "normal": 0.8rem,
-  "big": 1.6rem,
-  "bigger": 2.6rem,
+  "normal": 0.8rem, // 14px
+  "big": 1.6rem, //25px
+  "bigger": 2.6rem, //42px
+  "top-logo": 70px,
+  "top-sup": 12px
 );
 
 // functions
