--- a/web/themes/custom/subtheme/scss/global-styling.scss
+++ b/web/themes/custom/subtheme/scss/global-styling.scss
@@ -1,10 +1,10 @@
 @import "./variables";
 
-* {
+body {
   font-size: font-size("normal");
   font-weight: font-weight("bold");
   color: $base-color;
-  text-decoration: none;
+
   margin: 0;
   padding: 0;
 }
@@ -13,6 +13,7 @@
 a {
   color: $base-color;
   @include hoverColor();
+  text-decoration: none;
 }
 
 
