--- a/web/themes/custom/subtheme/scss/header.scss
+++ b/web/themes/custom/subtheme/scss/header.scss
@@ -1,10 +1,14 @@
 @import "./variables";
-
-.layout__region--content {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+.layout--onecol {
+  width: 100%;
+  & .layout__region--content {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
+
 
 .menu {
   list-style: none;
@@ -47,6 +51,7 @@
     }
 
     &:first-child {       //my account
+      white-space: nowrap;
       &::before {
         @include addPlaceForIcon();
         background: url("../images/person-cropped.svg");
@@ -68,8 +73,31 @@
         font-weight: font-weight('medioum+');
 
       }
-
-
     }
   }
 }
+
+// main logo styling
+
+.logo-main {
+  position: relative;
+
+
+  & p {
+    //font-style: italic;
+    font-weight: font-weight("bold");
+    line-height: 1.2;
+    font-size: font-size("top-logo");
+    white-space: nowrap;
+    color: $exclusive-color;
+    & sup {
+      font-style: italic;
+      font-size: font-size("top-sup");
+      color: $base-color;
+      position: absolute;
+      top: 10px;
+      right: 10px;
+    }
+  }
+}
+
