4702 final adjustments to the header. It is still not adaptive, but now it has classes via layout builder styles and styled main logo of the site

--- a/web/themes/custom/subtheme/scss/header.scss
+++ b/web/themes/custom/subtheme/scss/header.scss
@@ -1,5 +1,7 @@
 @import "./variables";
-.layout--onecol {
+
+
+.custom-header {
   width: 100%;
   & .layout__region--content {
     width: 100%;
@@ -79,7 +81,7 @@
 
 // main logo styling
 
-.logo-main {
+.custom-logo {
   position: relative;
 
 
