--- a/web/themes/custom/subtheme/scss/global-styling.scss
+++ b/web/themes/custom/subtheme/scss/global-styling.scss
@@ -3,17 +3,16 @@
 body {
   font-size: font-size("normal");
   font-weight: font-weight("bold");
+  line-height: 1.3;
   color: $base-color;
-
   margin: 0;
   padding: 0;
 }
 
-
 a {
   color: $base-color;
-  @include hoverColor();
+
+  @include hover-color;
+
   text-decoration: none;
 }
-
-
