--- a/web/themes/custom/subtheme/scss/_variables.scss
+++ b/web/themes/custom/subtheme/scss/_variables.scss
@@ -11,6 +11,7 @@ $font-weights: (
   "bold": 700,
 );
 $font-size: (
+  "small": 0.65rem,
   "normal": 0.8rem, // 14px
   "normal+": 0.9rem,
   "big": 1.6rem,    // 25px
