--- a/web/themes/custom/subtheme/scss/FP-highlighted.scss
+++ b/web/themes/custom/subtheme/scss/FP-highlighted.scss
@@ -5,9 +5,10 @@
   margin: 0 auto;
 
   .views-view-grid--vertical {
-    font-size: font-size("small");
-    font-weight: font-weight("regular");
-    &:first-child h2{
+    font-size: $font-size-small;
+    font-weight: var(--main-bg-color);
+
+    &:first-child h2 {
       margin: 0;
     }
   }
