--- a/web/themes/custom/subtheme/scss/global-styling.scss
+++ b/web/themes/custom/subtheme/scss/global-styling.scss
@@ -1,8 +1,8 @@
 @import "./variables";
 
 body {
-  font-size: font-size("normal");
-  font-weight: font-weight("bold");
+  font-size: $font-size-normal;
+  font-weight: $font-weight-bold;
   line-height: 1.3;
   color: $base-color;
   margin: 0;
