4703 Minor highlighted block update (bottom margin added)

--- a/web/themes/custom/subtheme/scss/FP-highlighted.scss
+++ b/web/themes/custom/subtheme/scss/FP-highlighted.scss
@@ -2,7 +2,7 @@
 
 .custom-fp-highlighted {
   width: 90%;
-  margin: 0 auto;
+  margin: 0 auto 1rem;
 
   .views-view-grid--vertical {
     font-size: $font-size-small;
