--- a/web/themes/custom/subtheme/scss/global-styling.scss
+++ b/web/themes/custom/subtheme/scss/global-styling.scss
@@ -5,8 +5,9 @@ body {
   font-weight: $font-weight-bold;
   line-height: 1.3;
   color: $base-color;
-  margin: 0;
-  padding: 0;
+  margin: 0 auto;
+  padding: 0 35px;
+  max-width: 1600px;
 }
 
 a {
