--- a/web/themes/custom/subtheme/scss/header.scss
+++ b/web/themes/custom/subtheme/scss/header.scss
@@ -1,7 +1,17 @@
 @import "./variables";
 
+/*
+custom-header
+  layout__region--content
+    menu--header-left-menu   custom-logo    menu--header-right-menu
+       ||                       ||
+      ul                      div>div
+        li*2                     \\
+          span:after             p: a, sup
+*/
 .custom-header {
   width: 100%;
+  margin: 0 auto;
 
   .layout__region--content {
     width: 100%;
@@ -56,15 +66,16 @@
     font-size: $font-size-top-logo;
     white-space: nowrap;
     color: $exclusive-color;
+    font-style: italic;
+  }
 
-    & sup {
-      font-style: italic;
-      font-size: $font-size-top-sup;
-      color: $base-color;
-      position: absolute;
-      top: 10px;
-      right: 10px;
-    }
+  sup {
+    font-style: italic;
+    font-size: $font-size-top-sup;
+    color: black;
+    position: absolute;
+    top: 27px;
+    right: -13px;
   }
 }
 
@@ -108,6 +119,47 @@
         color: white;
         font-weight: $font-weight-medium-plus;
       }
+    }
+  }
+}
+
+@media (max-width: $breakpoint2) {
+  .custom-header > .layout__region--content {
+    justify-content: center;
+    margin-top: 1.6rem;
+
+    .menu--header-left-menu {
+      width: 100%;
+      display: block;
+      position: relative;
+
+      ul li {
+        &:first-child::after {
+          position: absolute;
+          left: 0;
+        }
+
+        &:last-child::after {
+          position: absolute;
+          right: 0;
+        }
+
+        &:first-child span {
+          font-size: 0;
+        }
+
+        &:last-child span {
+          font-size: 0;
+        }
+      }
+    }
+
+    .custom-logo {
+      position: absolute;
+
+    }
+    .menu--header-right-menu {
+      display: none;
     }
   }
 }
