4740 Adding main style for footer. Slight improvements in header. Webpack is now used without HTML plugin, so it does not generate index.html in the dist folder anymore. Also I've updated information about regions in .info.yml

--- a/web/themes/custom/subtheme/scss/header.scss
+++ b/web/themes/custom/subtheme/scss/header.scss
@@ -10,6 +10,7 @@ custom-header
           span:after             p: a, sup
 */
 .custom-header {
+
   width: 100%;
   margin: 0 auto;
 
@@ -124,9 +125,16 @@ custom-header
 }
 
 @media (max-width: $breakpoint2) {
+  .custom-header {
+    position: sticky;
+    top: 60px;
+  }
   .custom-header > .layout__region--content {
     justify-content: center;
     margin-top: 1.6rem;
+    height: 50px;
+    padding: 10px 0;
+
 
     .menu--header-left-menu {
       width: 100%;
