temp.branch New styles are applied, title module is added, adaptive margins are disabled, twig 'header issue' was fixed + some minor fixes

--- a/web/themes/custom/subtheme/scss/global-styling.scss
+++ b/web/themes/custom/subtheme/scss/global-styling.scss
@@ -17,3 +17,10 @@ a {
 
   text-decoration: none;
 }
+
+.custom-exclusive-and-title {
+  margin-bottom: 1rem;
+  & > .layout__region--content > .block-field-blocknodearticletitle h2 a{
+    float: left;
+  }
+}
