--- a/web/themes/custom/subtheme/scss/_variables.scss
+++ b/web/themes/custom/subtheme/scss/_variables.scss
@@ -15,6 +15,7 @@ $font-weight-bold: 700;
 // font size
 
 $font-size-small: 0.65rem;  // 10px
+$font-size-tag: 0.75rem;  // 12px
 $font-size-normal-minus: 0.813rem; // 13px
 $font-size-normal: 0.875rem; // 14px
 $font-size-normal-plus: 0.9rem; // 15px
