--- a/web/themes/custom/subtheme/scss/menu.scss
+++ b/web/themes/custom/subtheme/scss/menu.scss
@@ -13,7 +13,7 @@
 }
 
 .custom-pages-name .field-content {   // Menupage: page's name
-  font-size: $font-size-bigger;
+  font-size: $font-size-huge;
 
   @include centrify;
 }
