--- a/web/themes/custom/subtheme/scss/FP/FP-highlighted.scss
+++ b/web/themes/custom/subtheme/scss/FP/FP-highlighted.scss
@@ -1,10 +1,9 @@
-@import "variables";
+@import "scss/variables";
 
 .custom-fp-highlighted {
   width: 90%;
   max-width: 1280px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 2rem auto;
 
   .views-view-grid--vertical {
     font-size: $font-size-small;
