--- a/web/themes/custom/subtheme/scss/global-styling.scss
+++ b/web/themes/custom/subtheme/scss/global-styling.scss
@@ -6,7 +6,7 @@ body {
   line-height: 1.3;
   color: $base-color;
   margin: 0 auto;
-  padding: 0 35px;
+  padding: 0 35px !important;
   max-width: 1600px;
 }
 
@@ -20,6 +20,27 @@ a {
 
 // setting for global classes
 
+.black-background {             // category title
+  background-color: black;
+}
+
+.red-background {            // category title
+  background-color: $highlight-color;
+  font-style: italic;
+}
+
+.rectangular-category-title {            // category title
+  display: inline-block;
+  color: white;
+  padding: 8px 16px 10px 14px;
+  font-size: 20px;
+  font-weight: $font-weight-bold;
+  letter-spacing: 2px;
+  position: absolute;
+  top: -30px;
+  left: 30px;
+  z-index: 6;
+}
 .custom-exclusive-and-title {
   margin-bottom: 1rem;
 }
