4780 logic and styling for scroll-to-top button

--- a/web/themes/custom/subtheme/scss/style.scss
+++ b/web/themes/custom/subtheme/scss/style.scss
@@ -3,6 +3,7 @@
 @import "header";
 @import "menu";
 @import "footer";
+@import "scroll-to-top-styles";
 @import "FP/FP-highlighted";
 @import "FP/FP-top-block";
 @import "FP/FP-top-block-region-first";
